Mon May 10 15:24:36 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

Thu Apr  8 16:09:08 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* winccld.c: Only compile this file on Windows (to avoid screwing
		up the Macintosh build).

1999-03-31  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* winccld.c, winccld.h, stdcc.c: Add files to dynamically load
		krbcc32.dll, so that we can fall back and use the built-in
		file ccache type if krbcc32.dll doesn't exist.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)
